fix: otp-1905: remove horizontal scroll bar forced by login box

--- a/grails-app/assets/stylesheets/info.less
+++ b/grails-app/assets/stylesheets/info.less
@@ -64,8 +64,8 @@
     min-height: 105px;
     height: 10%;
     width: 382px;
-    top: -5px;
-    right: -10px;
+    top: -10px;
+    right: 0;
     display: block;
     float: right;
     font-size: 1.2em;
